client/src/components/Landing/Landing.css
.wrap {
  margin: 0px auto;
  height: 100%;
  display: grid;
  grid-template-rows: auto 50px;
}

.translate-wrap {
  width: 80%;
  max-width: 800px;
  margin: 150px auto 0px auto;
  text-align: center;
}

.brand {
  font-size: 5rem;
}

.text {
  margin-top: 20px;
  font-size: 1.5rem;

  line-height: 1.7;
  letter-spacing: 0.7px;
  font-weight: 400;
}

.input-wrap {
  margin-top: 40px;
  display: grid;
  width: 100%;
  grid-template-columns: 3fr 2fr 3fr;
  grid-template-rows: 2fr 4fr 2fr;
  grid-template-areas:
    "source icon destination"
    "text text text"
    ". . submit";
  row-gap: 15px;
}

.center {
  display: grid;
  place-items: center;
}

.input-code {
  grid-column: span 3;
  grid-area: text;
  border: none;
  background-color: #f2f2f2;
  border-radius: 10px;
  font-size: 2rem;
  padding-left: 30px;
  transition: background-color 0.3s ease, box-shadow 0.1s linear;
}

input:hover {
  background-color: yellow;
}

input:focus {
  background-color: #f2f2f2;
  outline: none !important;
  /* border: 2px solid red;
  border-radius: 10px; */
  box-shadow: 0 0 0 2px red;
}

.source {
  grid-area: source;
}

.destination {
  grid-area: destination;
}

.icon {
  grid-area: icon;
}

.submit {
  grid-area: submit;
}

.submit-button {
  width: 60%;
  height: 100%;
}

.output {
  width: 100%;
  border: 1px solid black;
  margin-top: 10px;
  height: 200px;
  overflow-y: scroll;
}

@media only screen and (max-width: 600px) {
  .submit-button {
    width: 100%;
  }
  .brand {
    font-size: 3rem;
  }
  .translate-wrap {
    margin: 100px auto 0px auto;
  }
}

/* .submit {
  grid-area: submit;
  font-size: 20px;
  border: none;
  outline: none;
  background-color: #4f6ccd;
  color: white;
} */

